# -

./: .gitignore  DEPLOY.md  README.md  pyproject.toml  render.yaml  啟動自動排程.command  啟動量化網站.command  更新真實資料儀表板.command  開啟量化儀表板.command
cloud_seed/artifacts_real/: daily_sentiment.csv  data_coverage.csv  daytrade_latest.csv  daytrade_latest.json  equity_curve.csv  feature_importance.csv  latest_risk_plan.csv  metrics.csv  model_comparison.csv  news_items.csv
configs/: example.yml
scripts/: build_cloud_seed.sh  start_web.sh
src/tw_ai_quant/: automation.py  backtest.py  cli.py  config.py  dashboard.py  data.py  features.py  market_data.py  model.py  notify.py  pipeline.py  risk.py  sentiment.py  universe.py  web.py
tests/: test_backtest.py  test_demo_pipeline.py  test_web_signals.py
