[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tw-ai-quant"
version = "0.1.0"
description = "AI-powered Taiwan stock analysis pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "certifi>=2023.5.7",
  "fastapi>=0.115",
  "joblib>=1.3",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyyaml>=6.0",
  "requests>=2.31",
  "scikit-learn>=1.4",
  "uvicorn>=0.30",
  "yfinance>=0.2.40"
]

[project.optional-dependencies]
boosting = ["lightgbm>=4.3", "xgboost>=2.0"]
openai = ["openai>=1.40"]
report = ["quantstats>=0.0.62"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
tw-quant = "tw_ai_quant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
